<resources>
    <string name="app_name">Week3es1</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="age">Age</string>
    <string name="email">E-mail</string>
    <string name="add_person">Aggiungi Persona</string>
    <string name="label_add_person">Aggiungi Persona</string>
    <string name="label_person_placeholder">Nessuna persona presente nel Database</string>
</resources>
